# netcomm

./: .gitignore  CMakeLists.txt  CMakePresets.json  builder.bat  builder.sh  run.bat  run_multiple.bat  run_multiple.sh  server.ps1  total_eroil_test_usage.ps1
Tests/: CMakeLists.txt
Tests/src/: io.h  labels.h  main.cpp  tests.h  windows_hdr.h
Tests/src/randomizer/: randomizer.cpp  randomizer.h
Tests/src/scenario/: scenario.cpp  scenario.h
eROIL/: CMakeLists.txt
eROIL/include/eROIL/: eroil.h  eroil_c.h  eroil_cpp.h  print.h
eROIL/src/: assertion.h  eroil.cpp  eroil.h  macros.h  platform.h  root.cpp  root.h  rtos.h  safe_print.h  utils.h
eROIL/src/address/: address.cpp  address.h
eROIL/src/api/: eroil_c.cpp  eroil_cpp.cpp  root.cpp  root.h
eROIL/src/broadcast/: broadcast.cpp  broadcast.h
eROIL/src/comm/: connection_manager.cpp  connection_manager.h  write_iosb.h
eROIL/src/comms/: recvrs.cpp  recvrs.h
eROIL/src/config/: config.cpp  config.h
eROIL/src/conn/: connection_manager.cpp  connection_manager.h
eROIL/src/events/: named_event.h  named_semaphore.h  semaphore.h
eROIL/src/events/linux/: linux_named_event.cpp  linux_named_semaphore.cpp  linux_semaphore.cpp
eROIL/src/events/win/: win_named_event.cpp  win_named_semaphore.cpp  win_semaphore.cpp
eROIL/src/inbox/: inbox.cpp  inbox.h  inbox_header.h  inbox_layout.h
eROIL/src/log/: evtlog.cpp  evtlog.h  evtlog_api.h  evtrecord.h  log.cpp  log.h
eROIL/src/manager/: manager.cpp  manager.h  peer_state.cpp  peer_state.h
eROIL/src/net/: socket.h
eROIL/src/net/win/: win_client_socket.cpp  win_context.cpp  win_socket.cpp  win_socket_tcp.cpp  win_socket_udp.cpp  win_socket_udpm.cpp
eROIL/src/platform/: platform.h
eROIL/src/platform/linux/: linux_platform.cpp
eROIL/src/platform/win/: win_platform.cpp
eROIL/src/router/: dispatch.cpp  dispatch.h  dispatcher.cpp  dispatcher.h  route_table.cpp  route_table.h  router.cpp  router.h  router_old.cpp  transport_registry.cpp  transport_registry.h
eROIL/src/shm/: shm.cpp  shm.h  shm_header.h  shm_io.cpp  shm_io.h  shm_recv.cpp  shm_recv.h  shm_send.cpp  shm_send.h
eROIL/src/shm/linux/: linux_shm.cpp
eROIL/src/shm/win/: win_shm.cpp  win_shm_recv.cpp  win_shm_send.cpp
eROIL/src/socket/: socket_context.h  socket_header.h  socket_result.h  tcp_socket.h  udp_multicast.h
eROIL/src/socket/linux/: linux_map_err.cpp  linux_socket_context.cpp  linux_tcp_client.cpp  linux_tcp_server.cpp  linux_tcp_socket.cpp  linux_udp_multicast.cpp
eROIL/src/socket/win/: win_map_err.cpp  win_socket_context.cpp  win_tcp_client.cpp  win_tcp_server.cpp  win_tcp_socket.cpp  win_udp_multicast.cpp
eROIL/src/time/: time_store.cpp  time_store.h  timer.h  timing.h
eROIL/src/timer/: time_log.cpp  time_log.h  timer.cpp  timer.h
eROIL/src/types/: broadcast_msg.h  const_types.h  handles.h  iosb.h  label_hdr.h  label_io_types.h  macros.h  send_io_types.h  types.h
eROIL/src/workers/: recv_worker.h  send_plan.h  send_worker.cpp  send_worker.h  shm_recv_worker.cpp  shm_recv_worker.h  socket_recv_worker.cpp  socket_recv_worker.h  thread_worker.h
eROIL/src/wrappers/: eroil_c.cpp  eroil_cpp.cpp
etc/: manager.cfg  peer_ips.cfg
scenarios/: scenario_3888.txt  scenario_3889.txt
